--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,11 @@
 
 [env]
 lib_deps = 
-	adafruit/Adafruit BMP280 Library@^2.6.8
-	adafruit/Adafruit AHTX0 @ ^2.0.5
-	fastled/FastLED@^3.8.0
+	https://github.com/adafruit/Adafruit_BMP280_Library.git
+	https://github.com/adafruit/Adafruit_AHTX0.git
+	https://github.com/FastLED/FastLED.git
+	https://github.com/tzapu/WiFiManager.git
+	https://github.com/mathertel/LiquidCrystal_PCF8574.git
 	
 [env:esp32]
 platform = espressif32
@@ -31,8 +33,8 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
-monitor_rts = 0
-monitor_dtr = 0
+;monitor_rts = 0
+;monitor_dtr = 0
 upload_port = /dev/cu.wchusbserial58FA0779861
 ; upload_port = /dev/cu.wchusbserial14130
 upload_speed = 921600
